--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -711,6 +711,10 @@ html {
   z-index: 50;
 }
 
+.z-20 {
+  z-index: 20;
+}
+
 .m-4 {
   margin: 1rem;
 }
@@ -785,12 +789,12 @@ html {
   height: 1.5rem;
 }
 
-.h-dvh {
-  height: 100dvh;
-}
-
 .h-auto {
   height: auto;
+}
+
+.h-dvh {
+  height: 100dvh;
 }
 
 .max-h-72 {
@@ -803,6 +807,10 @@ html {
 
 .w-1\/4 {
   width: 25%;
+}
+
+.w-12 {
+  width: 3rem;
 }
 
 .w-36 {
@@ -827,14 +835,6 @@ html {
 
 .w-full {
   width: 100%;
-}
-
-.w-auto {
-  width: auto;
-}
-
-.w-12 {
-  width: 3rem;
 }
 
 .transform {
@@ -1044,6 +1044,16 @@ html {
 .py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
+}
+
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 
 .pb-12 {
