--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -707,16 +707,12 @@ html {
   top: 100%;
 }
 
-.z-50 {
-  z-index: 50;
-}
-
 .z-20 {
   z-index: 20;
 }
 
-.z-40 {
-  z-index: 40;
+.z-50 {
+  z-index: 50;
 }
 
 .m-4 {
@@ -801,12 +797,37 @@ html {
   height: 100dvh;
 }
 
+.h-fit {
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
+.h-20 {
+  height: 5rem;
+}
+
+.h-44 {
+  height: 11rem;
+}
+
+.h-36 {
+  height: 9rem;
+}
+
+.h-32 {
+  height: 8rem;
+}
+
 .max-h-72 {
   max-height: 18rem;
 }
 
 .max-h-\[160px\] {
   max-height: 160px;
+}
+
+.max-h-32 {
+  max-height: 8rem;
 }
 
 .w-1\/4 {
@@ -833,12 +854,37 @@ html {
   width: 1.5rem;
 }
 
-.w-\[214px\] {
-  width: 214px;
-}
-
 .w-full {
   width: 100%;
+}
+
+.w-auto {
+  width: auto;
+}
+
+.w-fit {
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.w-24 {
+  width: 6rem;
+}
+
+.w-1\/2 {
+  width: 50%;
+}
+
+.w-2\/5 {
+  width: 40%;
+}
+
+.w-1\/3 {
+  width: 33.333333%;
+}
+
+.max-w-96 {
+  max-width: 24rem;
 }
 
 .transform {
@@ -863,6 +909,10 @@ html {
 
 .content-start {
   align-content: flex-start;
+}
+
+.content-between {
+  align-content: space-between;
 }
 
 .items-start {
@@ -1035,29 +1085,19 @@ html {
   padding-right: 1rem;
 }
 
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-}
-
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
 }
 
-.py-8 {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
-
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
 .py-6 {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
+}
+
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 .pb-12 {
@@ -1074,6 +1114,10 @@ html {
 
 .pt-20 {
   padding-top: 5rem;
+}
+
+.pb-2 {
+  padding-bottom: 0.5rem;
 }
 
 .text-center {
@@ -1258,6 +1302,10 @@ html {
     align-items: center;
   }
 
+  .lg\:justify-start {
+    justify-content: flex-start;
+  }
+
   .lg\:justify-between {
     justify-content: space-between;
   }
@@ -1297,6 +1345,10 @@ html {
 
   .xl\:w-1\/2 {
     width: 50%;
+  }
+
+  .xl\:w-2\/5 {
+    width: 40%;
   }
 
   .xl\:flex-row {
